--- a/project.yaml
+++ b/project.yaml
@@ -8,7 +8,7 @@ network:
 dataSources:
   - name: main
     kind: substrate/Runtime
-    startBlock: 7828270
+    startBlock: 7828270 #7862400 lease 13 created
     mapping:
       handlers:
         - handler: handleParachainRegistered
