--- a/project.yaml
+++ b/project.yaml
@@ -6,8 +6,10 @@ network:
   endpoint: 'wss://kusama.api.onfinality.io/public-ws'
   dictionary: 'https://api.subquery.network/sq/subquery/dictionary-kusama'
 dataSources:
-  - name: main
+  - name: KusamaRuntime
     kind: substrate/Runtime
+    filter:
+      specName: kusama
     startBlock: 7828000
     mapping:
       handlers:
@@ -26,11 +28,73 @@ dataSources:
           filter:
             module: crowdloan
             method: Contributed
-        - handler: handleCrowdloanAllRefunded
+        # - handler: handleCrowdloanAllRefunded
+        #   kind: substrate/EventHandler
+        #   filter:
+        #     module: crowdloan
+        #     method: AllRefunded
+        - handler: handleCrowdloanDissolved
           kind: substrate/EventHandler
           filter:
             module: crowdloan
-            method: AllRefunded
+            method: Dissolved
+        - handler: handleSlotsLeased
+          kind: substrate/EventHandler
+          filter:
+            module: slots
+            method: Leased
+        - handler: handleNewLeasePeriod
+          kind: substrate/EventHandler
+          filter:
+            module: slots
+            method: NewLeasePeriod
+        - handler: handleAuctionStarted
+          kind: substrate/EventHandler
+          filter:
+            module: auctions
+            method: AuctionStarted
+        - handler: handleAuctionClosed
+          kind: substrate/EventHandler
+          filter:
+            module: auctions
+            method: AuctionClosed
+        - handler: handleAuctionWinningOffset
+          kind: substrate/EventHandler
+          filter:
+            module: auctions
+            method: WinningOffset
+        - handler: handleBidAccepted
+          kind: substrate/EventHandler
+          filter:
+            module: auctions
+            method: BidAccepted
+  - name: PolkadotRuntime
+    kind: substrate/Runtime
+    filter:
+      specName: polkadot
+    startBlock: 7553930 # the first register
+    mapping:
+      handlers:
+        - handler: handleParachainRegistered
+          kind: substrate/EventHandler
+          filter:
+            module: registrar
+            method: Registered
+        - handler: handleCrowdloanCreated
+          kind: substrate/EventHandler
+          filter:
+            module: crowdloan
+            method: Created
+        - handler: handleCrowdloanContributed
+          kind: substrate/EventHandler
+          filter:
+            module: crowdloan
+            method: Contributed
+        # - handler: handleCrowdloanAllRefunded
+        #   kind: substrate/EventHandler
+        #   filter:
+        #     module: crowdloan
+        #     method: AllRefunded
         - handler: handleCrowdloanDissolved
           kind: substrate/EventHandler
           filter:
