feat: added memo handler to contributions
Signed-off-by: Gregory Hill <gregorydhill@outlook.com>

--- a/project.yaml
+++ b/project.yaml
@@ -28,6 +28,11 @@ dataSources:
           filter:
             module: crowdloan
             method: Contributed
+        - handler: handleCrowdloanMemo
+          kind: substrate/EventHandler
+          filter:
+            module: crowdloan
+            method: MemoUpdated
         # - handler: handleCrowdloanAllRefunded
         #   kind: substrate/EventHandler
         #   filter:
@@ -90,6 +95,11 @@ dataSources:
           filter:
             module: crowdloan
             method: Contributed
+        - handler: handleCrowdloanMemo
+          kind: substrate/EventHandler
+          filter:
+            module: crowdloan
+            method: MemoUpdated
         # - handler: handleCrowdloanAllRefunded
         #   kind: substrate/EventHandler
         #   filter:
